# python-bandit

./: .coverage  01_thompson_sampling.ipynb  02_beta.ipynb  03_thompson_sampling.ipynb  04_vowpal_wabbit.ipynb  04_vowpal_wabbit.md  05_contextual_bandit_content_personalization.ipynb  05_contextual_bandit_content_personalization.md  06_vowpal_wabbit_explore.ipynb  06_vowpal_wabbit_explore.md  07_vowpal_wabbit_explore.ipynb  07_vowpal_wabbit_explore.md  08_neural_bandit.ipynb  08_neural_bandit.md  09_mushroom_uci.ipynb  09_mushroom_uci.md  10_categorical_draw.ipynb  11-tensorflow.ipynb  11-tensorflow.md  12_modular.ipynb  13_dynamic.ipynb  13_linucb.ipynb  14_keras_contextual_bandit.ipynb  15_torch_bandit.ipynb  16_falcon.ipynb  17_linucb.md  Makefile  README.md  cb.model  cb_explore.model  claude.md  contextual_bandit.csv  contextual_bandit.json  contextual_bandit_dynamic.csv  contextual_bandit_dynamic.json  house.model  house_dataset.cache  model.vw  playground.ipynb  pyproject.toml
bandit/: 15_torch_contextual_bandit.ipynb  bandit.py  bandit_test.py  base.py  environment.py  falcon.py  logistic.py  logistic_test.py  neural_bandit.py  policy.py  policy_test.py  tensorflow.py  tensorflow_test.py  torch.py  torch_test.py  tree.py  utils.py
docs/: 01_simple_mab.md  01_thompson_sampling.md  02_beta.md  03_thompson_sampling.md  04_vowpal_wabbit.md  05_contextual_bandit_content_personalization.md  08_neural_bandit.md  09_mushroom_uci.md  10_categorical_draw.md  11-tensorflow.md  12_modular.md  13_dynamic.md  13_linucb.md  14_keras_contextual_bandit.md  15_torch_bandit.md  15_torch_contextual_bandit.md  16_falcon.md  playground.md
mastering-reinforcement-learning-with-python/: 01_simple_mab.ipynb
