[tool.poetry]
name = "python-bandit"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.1.4"
vowpalwabbit = "^9.9.0"
jupyterlab = "^4.0.10"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
ipywidgets = "^8.1.1"
scipy = "^1.11.4"
black = "^23.12.1"
isort = "^5.13.2"
jupyterlab-code-formatter = "^2.2.1"
jupytext = "^1.16.0"
scikit-learn = "^1.3.2"
ucimlrepo = "^0.0.3"
tqdm = "^4.66.1"
seaborn = "^0.13.1"
tensorflow = "2.15.0"
pytest = "^7.4.4"
coverage = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
